--- a/web/themes/custom/govcon/templates/node/node--session-archive--session-archive-listing.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive--session-archive-listing.html.twig
@@ -1,9 +1,7 @@
 {% set image = content.field_image[0] ?? null %}
-{% set image_alt = content.field_image[0]['#alt'] ?? "Sample image" %}
 
-{% include "@molecules/listing-card/listing-card.twig" with {
+{% embed "@molecules/listing-card/listing-card.twig" with {
     image: image,
-    image_alt: image_alt,
     heading: node.label(),
     description: content.body[0] ?? null,
     cta: {
@@ -15,3 +13,7 @@
     conference_year: content.field_conference_year[0],
     presenters: null,
 } %}
+    {% block listing_image %}
+        {{ content.field_image}}
+    {% endblock %}
+{% endembed %}
