--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -1,9 +1,22 @@
 @use '@atoms/colors/color' as color;
 @use '@base/mixins.scss' as mixins;
 
-.listing-card .upper-card {
-  flex-direction: row;
-  gap: 2rem;
+.listing-card {
+  .upper-card {
+    flex-direction: row;
+    gap: 2rem;
+
+    @include mixins.media-breakpoint-down(lg) {
+      flex-direction: column;
+    }
+  }
+
+  .listing-card__image {
+    @include mixins.media-breakpoint-up(md) {
+      max-width: 400px;
+      width: 100%;
+    }
+  }
 }
 
 .listing-card__fields {
@@ -12,18 +25,14 @@
   column-gap: 8rem;
   row-gap: 1rem;
   padding-inline: 32px;
-}
 
-@include mixins.media-breakpoint-down(lg) {
-  .listing-card .upper-card {
-    flex-direction: column;
-  }
-
-  .listing-card__fields {
+  @include mixins.media-breakpoint-down(lg) {
     padding-inline: 16px;
   }
+}
 
-  .listing-card__field {
+.listing-card__field {
+  @include mixins.media-breakpoint-down(lg) {
     gap: 4px;
   }
 }
