Fixed Font Sizing in Card (#82)

--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -11,6 +11,10 @@
     }
   }
 
+  .listing-card__description > * {
+    font-size: 1rem;
+  }
+
   .listing-card__image {
     @include mixins.media-breakpoint-up(md) {
       max-width: 400px;
