--- a/web/themes/custom/govcon/templates/node/node--session-archive--session-archive-listing.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive--session-archive-listing.html.twig
@@ -6,7 +6,7 @@
     description: content.body[0] ?? null,
     cta: {
         url: url,
-        content: "See Announcement"
+        content: "Read More"
     },
     session_track: content.field_session_track[0],
     technical_level: content.field_experience_level[0],
