--- a/web/themes/custom/govcon/components/base/utilities.scss
+++ b/web/themes/custom/govcon/components/base/utilities.scss
@@ -6,8 +6,8 @@ $spacer: 1rem;
 
 // Container Classes
 .container,
-.messages__wrapper,
-#block-govcon-tabs {
+.content-region > *,
+#content-moderation-entity-moderation-form {
   max-width: $container-width;
   width: 100%;
   margin: 0 auto;
@@ -18,6 +18,27 @@ $spacer: 1rem;
 .container-fluid {
   width: $container-fluid-width;
   margin: 0 auto;
+}
+
+body {
+  &:not(.node-type-landing_page) {
+    .content-region {
+      padding: 48px 0;
+    }
+  }
+
+  &.node-type-landing_page {
+    .content-region {
+      > * {
+        padding-top: 32px;
+      }
+
+      > article {
+        max-width: none;
+        padding: 0;
+      }
+    }
+  }
 }
 
 // Spacing values
@@ -232,9 +253,4 @@ $space-values: (
 
 .text-decoration-none {
   text-decoration: none !important;
-}
-
-.messages__wrapper,
-#block-govcon-tabs {
-  padding-top: 32px;
 }
