DGC-126: Updated Errors on Session Archive Detail Page (#80)
* DGC-126: Updated session archive CT.

* DGC-126: Updated margin styling.

* DGC-126: Updated twig logic and styling for all three CTs.

* DGC-126: Fixed author ct twigs.

* DGC-126: Updated twig files.

* DGC-126: Updated content types logics.

* DGC-126: Update the styling.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/base/utilities.scss
+++ b/web/themes/custom/govcon/components/base/utilities.scss
@@ -1,3 +1,4 @@
+@use '@base/mixins.scss' as mixins;
 // Variables
 $container-width: 1400px;
 $container-wide: 1920px;
@@ -23,7 +24,11 @@ $spacer: 1rem;
 body {
   &:not(.node-type-landing_page) {
     .content-region {
-      padding: 48px 0;
+      padding: 32px 0;
+
+      @include mixins.media-breakpoint-up(md) {
+        padding: 48px 0;
+      }
     }
   }
 
