--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
@@ -2,8 +2,6 @@
 @use "sass:map";
 
 .session_archive {
-  padding: 50px 0;
-
   .session_archive-container {
     &-page_title {
       .session_page_title {
@@ -27,23 +25,19 @@
         &-item {
           display: flex;
           align-items: center;
+          column-gap: 10px;
+          margin-top: 10px;
 
           a {
             text-decoration: none;
-            color: map.get(color.$colors, "black");
 
             &:hover {
               color: map.get(color.$colors, "indigo");
             }
           }
-
-          .item-label {
-            margin-left: 0;
-          }
         }
 
         &_label {
-          margin: 4px 8px 0;
           padding: 4px 8px;
           background: map.get(color.$colors, "light");
           font-weight: 700;
