--- a/web/themes/custom/govcon/templates/node/node--special-announcement.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--special-announcement.html.twig
@@ -2,6 +2,6 @@
 
 {% include '@templates/announcement/announcement.twig' with {
   announcement_page_title: { value: label }, 
-  announcement_description: { value: content.body },
-  announcement_post_date: { label: content.field_important_date['#title'], value: content.field_important_date['#markup'] },
+  announcement_description: { value: content.body[0]['#text'] },
+  announcement_post_date: { label: content.field_important_date['#title'], value: content.field_important_date[0]['#text'] }
 } %}
