--- a/web/themes/custom/govcon/components/templates/author/author.twig
+++ b/web/themes/custom/govcon/components/templates/author/author.twig
@@ -7,7 +7,6 @@
         </h1>
       </div>
     {% endif %}
-
     {% if author_name.first_name and author_name.last_name %}
       <div class="author_container-name author-content-item body-text">
         <span class="author-content-item_label">{{ author_name.label }}:</span>
@@ -15,26 +14,23 @@
         <div class="last-name">{{ author_name.last_name }}</div>
       </div>
     {% endif %}
-
-    {% if session_video %}
-      <div class="session_archive-container-video session_archive-video">
-        {% block session_video %}
-          <video class="session-video" controls>
-            <source src="{{ session_video }}" type="video/mp4">
-          </video>
+    {% if author_image %}
+      <div class="author_container-image">
+        {% block author__image %}
+          <img src="{{ author_image }}" alt="{{ author_image_alt }}" class="border-xs">
         {% endblock %}
       </div>
     {% endif %}
-
     {% if author_job_title.value %}
       <div class="author_container-job_title author-content-item body-text">
-        <span class="author-content-item_label">{{ author_job_title.label }}:</span>
+        {% if author_job_title.label %}
+          <span class="author-content-item_label">{{ author_job_title.label }}:</span>
+        {% endif %}
         {{ author_job_title.value }}
       </div>
     {% endif %}
-
     {% if author_bio.value %}
-      <div class="author_container-bio body-text">
+      <div class="author_container-bio author-content-item body-text">
         <p>{{ author_bio.value | raw }}</p>
       </div>
     {% endif %}
@@ -46,6 +42,5 @@
         <a href="{{ author_site_link.href }}" target="_blank">{{ author_site_link.value }}</a>
       </div>
     {% endif %}
-
   </div>
 </div>
