DGC: 112 - Sticky Header (#94)
* Sticky Header Size Reduced

* Fixed Flickring Issue

* Updated Critical CSS

* DGC-112: Update the sticky header class on screen size.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/atoms/button/button.scss
+++ b/web/themes/custom/govcon/components/atoms/button/button.scss
@@ -4,7 +4,7 @@ $border-width: 2px;
 $offset: 4px;
 $transition: 0.3s;
 
-.button:not(.button-with-icon, input),
+.button:not(.button-with-icon, input, .ui-button),
 .wp-block-button:not(.button-with-icon) {
   font-family: "Poppins", serif !important;
   font-weight: 600 !important;
