DGC: 136 - Create two-column pattern (#96)
* Added Two Column Pattern

* Added Two Column Pattern

* Added Featured Section & Updated Font Family

* Fixed Padding in pattern

* Pattern Image Centered

--- a/web/themes/custom/govcon/components/atoms/typography/typography.scss
+++ b/web/themes/custom/govcon/components/atoms/typography/typography.scss
@@ -5,6 +5,14 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.has-poppins-font-family {
+  font-family: "Poppins", sans-serif;
+}
+
+.has-roboto-mono-font-family {
+  font-family: "Roboto Mono", sans-serif;
+}
+
 // Headings
 h1,
 .h1 {
