--- a/web/themes/custom/govcon/components/molecules/patterns/card/featured-card/featured-card.twig
+++ b/web/themes/custom/govcon/components/molecules/patterns/card/featured-card/featured-card.twig
@@ -12,7 +12,7 @@
   </h4>
 
   <h4 class="wp-block-heading">
-    <a href="#">
+    <a href="#" class="button button-with-icon icon--arrow-right icon-after">
       View Session Info
     </a>
   </h4>
