--- a/web/themes/custom/govcon/components/templates/author/author.scss
+++ b/web/themes/custom/govcon/components/templates/author/author.scss
@@ -18,7 +18,9 @@
     &-site_link {
       a {
         text-decoration: none;
-        color: map.get(color.$colors, "black");
+        &:hover {
+          color: map.get(color.$colors, "indigo");
+        }
       }
     }
 
