--- a/web/themes/custom/govcon/components/templates/author/author.twig
+++ b/web/themes/custom/govcon/components/templates/author/author.twig
@@ -39,7 +39,7 @@
         {% if author_site_link.label %}
           <span class="author-content-item_label">{{ author_site_link.label }}:</span>
         {% endif %}
-        <a href="{{ author_site_link.href }}" target="_blank">{{ author_site_link.value }}</a>
+        <a href="{{ author_site_link.href }}">{{ author_site_link.value }}</a>
       </div>
     {% endif %}
   </div>
