--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -17,17 +17,21 @@
 }
 
 .gutenberg-container {
-  > :not(.alignwide):not(.alignfull),
+  > :not(.alignwide, .alignfull),
   > .wp-block-group.alignfull > .wp-block-group__inner-container{
     max-width: utility.$container-width;
     margin-left: auto;
     margin-right: auto;
-    @include mixins.media-breakpoint-up(md) {
-      padding-inline: 16px;
-    }
 
     .wp-block-columns {
       padding: 32px 0;
+    }
+  }
+
+  > :not(.alignwide, .alignfull, ul, ol),
+  > .wp-block-group.alignfull > .wp-block-group__inner-container{
+    @include mixins.media-breakpoint-up(md) {
+      padding-inline: 16px;
     }
   }
 
@@ -40,7 +44,7 @@
 }
 
 @include mixins.media-breakpoint-down(md) {
-  .gutenberg-container>div {
+  .gutenberg-container> *:not(ul, li) {
     padding-left: 16px !important;
     padding-right: 16px !important;
   }
@@ -120,6 +124,11 @@ html :where(.wp-block) {
   ol {
     padding-left: 32px;
     margin: 16px 0;
+  }
+
+  > ul,
+  > ol {
+    padding-left: 48px;
   }
 
   ul {
