--- a/web/themes/custom/govcon/components/molecules/pager/pager.demo.twig
+++ b/web/themes/custom/govcon/components/molecules/pager/pager.demo.twig
@@ -1,6 +1,6 @@
 <div class="container-fluid bg-dark py-32 text-light">
   <div class="content container">
-    <h1>Page Content</h1>
+    <h1 class="text-light">Page Content</h1>
     <p>This is a sample page layout.</p>
     {% include './pager.twig' %}
   </div>
