--- a/web/themes/custom/govcon/components/molecules/patterns/hero-image/hero-image.twig
+++ b/web/themes/custom/govcon/components/molecules/patterns/hero-image/hero-image.twig
@@ -1,5 +1,5 @@
 <div
-  class="wp-block-group hero-image has-light-background-color has-background is-horizontal is-content-justification-center is-nowrap is-layout-flex wp-container-core-group-layout-5 wp-block-group-is-layout-flex"
+  class="wp-block-group hero-image has-light-background-color has-background is-horizontal is-content-justification-center is-nowrap is-layout-flex wp-container-core-group-layout-5 wp-block-group-is-layout-flex aligncenter"
   style="border-radius:4px;padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--30)">
   <figure class="wp-block-image size-original is-resized has-custom-border">
     <img src="https://placehold.co/1368x400.png" alt=""
