--- a/web/themes/custom/govcon/components/molecules/patterns/hero-text-with-card/hero-text-with-card.twig
+++ b/web/themes/custom/govcon/components/molecules/patterns/hero-text-with-card/hero-text-with-card.twig
@@ -11,9 +11,9 @@
         <div class="wp-block-group__inner-container">
           <div class="wp-block-group is-content-justification-center is-layout-constrained wp-block-group-is-layout-constrained" style="margin-top:var(--wp--preset--spacing--30);margin-bottom:0">
             <div class="wp-block-group__inner-container">
-              <h3 class="wp-block-heading">
+              <h2 class="wp-block-heading h3">
                 Heading
-              </h3>
+              </h2>
 
               <p>
                 Welcome to our platform! Here, you can explore a variety of features designed to enhance your experience. Dive in and discover all the possibilities!
