--- a/web/themes/custom/govcon/components/atoms/typography/typography.scss
+++ b/web/themes/custom/govcon/components/atoms/typography/typography.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto Mono", sans-serif;
 }
 
 .has-poppins-font-family {
@@ -153,6 +153,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: "Poppins", sans-serif;
   margin-bottom: 1rem;
   line-height: 1.2;
 }
