--- a/web/themes/custom/govcon/components/molecules/patterns/hero-text-with-card/hero-text-with-card.twig
+++ b/web/themes/custom/govcon/components/molecules/patterns/hero-text-with-card/hero-text-with-card.twig
@@ -1,12 +1,12 @@
 <div class="wp-block-columns are-vertically-aligned-center is-layout-flex wp-container-core-columns-layout-1 wp-block-columns-is-layout-flex">
   <div class="wp-block-column is-vertically-aligned-center" style="flex-basis:64%">
-    <h1 class="wp-block-heading has-h-1-font-size">
+    <h1 class="wp-block-heading has-h-1-font-size {{ heading_color }}">
       Innovate Together: Connect, Learn, and Empower Through Open Source
     </h1>
   </div>
 
   <div class="wp-block-column is-vertically-aligned-center" style="flex-basis:36%">
-    <div class="wp-block-group has-surface-background-color has-background is-layout-constrained wp-block-group-is-layout-constrained" style="margin-top:var(--wp--preset--spacing--20);margin-bottom:var(--wp--preset--spacing--20);padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--30)">
+    <div class="wp-block-group has-surface-background-color has-background is-layout-constrained wp-block-group-is-layout-constrained vertical-card" style="margin-top:var(--wp--preset--spacing--20);margin-bottom:var(--wp--preset--spacing--20);padding-top:var(--wp--preset--spacing--30);padding-right:var(--wp--preset--spacing--30);padding-bottom:var(--wp--preset--spacing--30);padding-left:var(--wp--preset--spacing--30)">
       <div class="wp-block-group__inner-container">
         <div class="wp-block-group__inner-container">
           <div class="wp-block-group is-content-justification-center is-layout-constrained wp-block-group-is-layout-constrained" style="margin-top:var(--wp--preset--spacing--30);margin-bottom:0">
