DGC: 136 - Updated The Two Column Pattern Removed the Padding (#110)
* Updated The Two Column Pattern Removed the Padding

* Updated Pattern in Storybook & SCSS

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -217,5 +217,6 @@ html :where(.wp-block) {
 .two-column-text-image {
   @include mixins.media-breakpoint-down(md) {
     flex-direction: column-reverse;
+    gap: 32px;
   }
 }
