--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -19,6 +19,11 @@
     @include mixins.media-breakpoint-up(md) {
       max-width: 400px;
       width: 100%;
+      margin: 0 auto;
+    }
+
+    @include mixins.media-breakpoint-down(lg) {
+      text-align: center;
     }
   }
 }
