--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -16,14 +16,20 @@
   }
 
   .listing-card__image {
-    @include mixins.media-breakpoint-up(md) {
-      max-width: 400px;
+    @include mixins.media-breakpoint-up(lg) {
+      max-width: 220px;
       width: 100%;
-      margin: 0 auto;
     }
 
     @include mixins.media-breakpoint-down(lg) {
       text-align: center;
+      margin: 0 auto;
+    }
+  }
+
+  .button-with-icon {
+    @include mixins.media-breakpoint-up(lg) {
+      margin-top: 32px;
     }
   }
 }
