--- a/web/themes/custom/govcon/components/molecules/pager/pager.scss
+++ b/web/themes/custom/govcon/components/molecules/pager/pager.scss
@@ -20,6 +20,10 @@
     a {
       color: color.$white;
       text-decoration: none;
+
+      &:hover {
+        color: color.$skyblue;
+      }
     }
 
     &.is-active a {
