--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.scss
@@ -1,5 +1,6 @@
 @use '@atoms/colors/color' as color;
 @use '@base/mixins.scss' as mixins;
+@use "sass:map";
 
 .listing-card {
   .upper-card {
@@ -48,5 +49,17 @@
 .listing-card__field {
   @include mixins.media-breakpoint-down(lg) {
     gap: 4px;
+  }
+}
+
+.presenter-field {
+  a {
+    text-decoration: none;
+    margin-left: 10px;
+    color: map.get(color.$colors, "cobalt");
+
+    &:hover {
+      color: map.get(color.$colors, "indigo");
+    }
   }
 }
