--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.scss
@@ -34,15 +34,18 @@
 
       &-content {
         margin: 15px 0;
+        display: flex;
+        flex-direction: column;
+        column-gap: 10px;
 
         &-item {
           display: flex;
           align-items: center;
-          column-gap: 10px;
           margin-top: 10px;
 
           a {
             text-decoration: none;
+            margin-left: 5px;
             &:hover {
               color: map.get(color.$colors, "indigo");
             }
@@ -51,6 +54,7 @@
 
         &_label {
           padding: 4px 8px;
+          margin-right: 10px;
           background: map.get(color.$colors, "light");
           font-weight: 700;
         }
