--- a/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
@@ -1,16 +1,63 @@
 {{ attach_library('govcon/session-archive') }}
+{% set all_presenters = [] %}
+
+{% if content.field_presenter and content.field_presenter[0]['#url'] and content.field_presenter[0]['#title'] %}
+  {% set presenter_url = content.field_presenter[0]['#url'].toString() %}
+  {% set all_presenters = all_presenters|merge([{
+    "link_url": presenter_url,
+    "link_content": content.field_presenter[0]['#title']
+  }]) %}
+{% endif %}
+{% for co_presenter in content.field_co_presenter %}
+  {% if co_presenter['#url'] and co_presenter['#title'] %}
+    {% set co_presenter_url = co_presenter['#url'].toString() %}
+    {% set all_presenters = all_presenters|merge([{
+      "link_url": co_presenter_url,
+      "link_content": co_presenter['#title']
+    }]) %}
+  {% endif %}
+{% endfor %}
+
 {% embed '@templates/session-archive/session-archive.twig' with {
   session_page_title: { value: label },
-  session_recording: { label: content.field__sides_link['#title'], value: content.field__sides_link[0]['#title'] },
+  presenters: all_presenters,
+  session_recording: { 
+    label: content.field__sides_link['#title'],
+    value: content.field__sides_link[0]['#title'],
+    link_url: content.field__sides_link[0]['#url'] ? content.field__sides_link[0]['#url']|render : ''
+  },
   session_video: content.field_video[0],
-  session_description: { value: content.body[0]['#text'] },
-  session_experience_level: { label: content.field_experience_level['#title'], value: content.field_experience_level[0]['#markup'] },
-  session_conference_year: { label: content.field_conference_year['#title'], value: content.field_conference_year[0]['#title'] },
-  session_date_time: { label: content.field_session_date_time['#title'], value: content.field_session_date_time[0]['#text'] }, 
-  session_room: { label: content.field_room['#title'], value: content.field_room[0]['#context']['value'] },
-  session_status: { label: content.field_status['#title'], value: content.field_status[0]['#markup'] },
-  session_track: { label: content.field_session_track['#title'], value: content.field_session_track[0]['#context']['value'] },
-  supporting_document: { label: content.field_supporting_documents['#title'], value: content.field_supporting_documents[0] }
+  session_description: {
+    value: content.body[0]['#text']
+  },
+  session_experience_level: {
+    label: content.field_experience_level['#title'],
+    value: content.field_experience_level[0]['#markup'
+  },
+  session_conference_year: {
+    label: content.field_conference_year['#title'],
+    value: content.field_conference_year[0]['#title']
+  },
+  session_date_time: {
+    label: content.field_session_date_time['#title'],
+    value: content.field_session_date_time[0]['#text']
+  },
+  session_room: {
+    label: content.field_room['#title'],
+    value: content.field_room[0]['#context']['value']
+  },
+  session_status: {
+    label: content.field_status['#title'],
+    value: content.field_status[0]['#markup']
+  },
+  session_track: {
+    label: content.field_session_track['#title'],
+    value: content.field_session_track[0]['#context']['value']
+  },
+  supporting_document: {
+    label: content.field_supporting_documents['#title'],
+    value: content.field_supporting_documents[0]
+  }
 } %}
   {% block session_video %}
     {{ content.field_video }}
