--- a/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
@@ -32,7 +32,7 @@
   },
   session_experience_level: {
     label: content.field_experience_level['#title'],
-    value: content.field_experience_level[0]['#markup'
+    value: content.field_experience_level[0]['#markup']
   },
   session_conference_year: {
     label: content.field_conference_year['#title'],
