--- a/web/themes/custom/govcon/components/templates/author/author.twig
+++ b/web/themes/custom/govcon/components/templates/author/author.twig
@@ -29,7 +29,7 @@
       </div>
     {% endif %}
     {% if author_bio.value %}
-      <div class="author_container-bio author-content-item body-text">
+      <div class="author_container-bio body-text">
         <p>{{ author_bio.value | raw }}</p>
       </div>
     {% endif %}
