DGC-128: Fixed date/time and message glitch bug. (#118)
* DGC-128: Fixed date/time and message glitch bug.

* DGC-128: Drupal date/time format files.

* DGC-128: Fixed session archive twig file.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/base/admin-tab.scss
+++ b/web/themes/custom/govcon/components/base/admin-tab.scss
@@ -26,3 +26,10 @@
     }
   }
 }
+
+.node-preview-container {
+  padding-inline: 16px;
+  max-width: 1400px;
+  position: relative;
+  margin: 0 auto;
+}
