--- a/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
+++ b/web/themes/custom/govcon/templates/node/node--session-archive.html.twig
@@ -40,7 +40,7 @@
   },
   session_date_time: {
     label: content.field_session_date_time['#title'],
-    value: content.field_session_date_time[0]['#text']
+    value: content.field_session_date_time[0]['#markup']
   },
   session_room: {
     label: content.field_room['#title'],
