DGC-135: Styling of entity moderation form. (#127)
* DGC-135: Created styling of entity moderation form.

* DGC-135: Updated twig to fix functionality.

* DGC-135: Removed a tag, applied button styling to form submit.

* DGC-135: Updated only styling. Removed overriden twig file.

* DGC-135: Update the moderation state style.

* DGC-135: Remove the unused variables.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/web/themes/custom/govcon/components/atoms/button/button.scss
+++ b/web/themes/custom/govcon/components/atoms/button/button.scss
@@ -5,7 +5,8 @@ $offset: 4px;
 $transition: 0.3s;
 
 .button:not(.button-with-icon, input, .ui-button),
-.wp-block-button:not(.button-with-icon) {
+.wp-block-button:not(.button-with-icon),
+.entity-moderation-form .form-submit {
   font-family: "Poppins", serif !important;
   font-weight: 600 !important;
   outline: solid $border-width color.$primary-black;
