DGC-113: Update the spacing of featured section. (#137)

--- a/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
+++ b/web/themes/custom/govcon/components/gutenberg/gutenberg-editor.scss
@@ -157,6 +157,12 @@ html :where(.wp-block) {
     }
   }
 
+  .wp-block-column {
+    > .wp-block-group {
+      gap: 32px;
+    }
+  }
+
   a {
     &:hover {
       color: inherit;
